# python-providerkit

./: .gitignore  README.md  pyproject.toml
django-providerkit/: README.md  manage.py  pyproject.toml
django-providerkit/docs/: AI.md  README.md  development.md  purpose.md  structure.md
django-providerkit/src/django_providerkit/: __init__.py  apps.py  fields.py
django-providerkit/src/django_providerkit/admin/: __init__.py  filters.py  provider.py  service.py
django-providerkit/src/django_providerkit/managers/: __init__.py  provider.py  service.py
django-providerkit/src/django_providerkit/models/: __init__.py  define.py  provider.py  service.py
django-providerkit/src/django_providerkit/views/: provider.py
django-providerkit/tests/: settings.py  urls.py
docs/: development.md  structure.md
python-providerkit/: README.md  pyproject.toml
python-providerkit/docs/: AI.md  README.md  development.md  purpose.md  structure.md
python-providerkit/src/providerkit/: __init__.py  cli.py
python-providerkit/src/providerkit/commands/: provider.py
python-providerkit/src/providerkit/helpers/: load.py  module.py
python-providerkit/src/providerkit/kit/: __init__.py  config.py  response.py  service.py
python-providerkit/src/providerkit/providers/base/: __init__.py  execute.py
python-providerkit/tests/: alphabet.json  test_config.py  test_helpers.py
python-providerkit/tests/test_providers_alphabet/africa/: __init__.py  arabic.py  swahili.py
python-providerkit/tests/test_providers_alphabet/asia/: __init__.py  china.py  japan.py
python-providerkit/tests/test_providers_alphabet/europe/: __init__.py  france.py  spain.py
src/providerkit/: __init__.py
src/providerkit/commands/: provider.py
src/providerkit/helpers/: __init__.py  load.py  module.py
src/providerkit/kit/: __init__.py  config.py  cost.py  package.py  response.py  service.py
src/providerkit/providers/: config.py  folder.py  json.py  package.py
src/providerkit/providers/base/: __init__.py  execute.py  filter.py  sort.py
tests/test_providers_alphabet/: __init__.py
